--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://suyash.ml/" />
+    <meta property="og:url" content="https://suyashsonawane.github.io/" />
     <meta property="og:title" content="Suyash Sonawane" />
     <meta
       property="og:description"
@@ -26,7 +26,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://suyash.ml/" />
+    <meta property="twitter:url" content="https://suyashsonawane.github.io/" />
     <meta property="twitter:title" content="Suyash Sonawane" />
     <meta
       property="twitter:description"
