--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Suyash Sonawane" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://suyash.ml/">
+    <meta property="og:url" content="https://suyashsonawane.github.io/">
     <meta property="og:title" content="Suyash Sonawane">
     <meta property="og:description"
         content="Hi, I'm Suyash Sonawane and this is my portfolio website. It showcases my projects and achievements.">
@@ -20,7 +20,7 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://suyash.ml/">
+    <meta property="twitter:url" content="https://suyashsonawane.github.io/">
     <meta property="twitter:title" content="Suyash Sonawane">
     <meta property="twitter:description"
         content="Hi, I'm Suyash Sonawane and this is my portfolio website. It showcases my projects and achievements.">
@@ -28,7 +28,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/work.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css">
 </head>
 
 <body>
@@ -463,7 +463,7 @@
 </body>
 
 </html>
-<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script> -->
